--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="CellLinearLayout">
-        <item name="android:layout_width">110dip</item>
-        <item name="android:layout_height">fill_parent</item>
-        <item name="android:orientation">vertical</item>
-        <item name="android:padding">10dip</item>
-        <!--<item name="android:background">@android:color/darker_gray</item>-->
+    <style name="MainMenuItem">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:clickable">true</item>
+        <item name="android:background">@drawable/layout_border</item>
     </style>
 
-    <style name="DesktopImage">
+    <style name="MainMenuImage">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:adjustViewBounds">true</item>
-        <item name="android:maxWidth">70dip</item>
-        <item name="android:maxHeight">70dip</item>
-        <!--item name="android:background">@android:color/darker_gray</item-->
+        <item name="android:maxWidth">20dip</item>
+        <item name="android:maxHeight">20dip</item>
     </style>
 
-    <style name="DesktopCaption">
+    <style name="MainMenuText">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">top</item>
-        <item name="android:gravity">center</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:ellipsize">none</item>
-        <!--item name="android:background">@android:color/darker_gray</item-->
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:paddingLeft">20dip</item>
     </style>
 </resources>
