--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -14,15 +14,16 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:adjustViewBounds">true</item>
-        <item name="android:maxWidth">20dip</item>
-        <item name="android:maxHeight">20dip</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
     </style>
 
-    <style name="MainMenuText">
+    <style name="MainMenuText" parent="@android:style/TextAppearance.Medium">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@android:color/black</item>
-        <item name="android:paddingLeft">20dip</item>
+        <item name="android:paddingLeft">15dp</item>
     </style>
 </resources>
